--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.Duan1t1"
         tools:targetApi="31">
         <activity
-            android:name=".EventBus.DangNhapActivity"
+            android:name=".EventBus.DangKyActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".EventBus.DangNhapActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Model.MainActivity"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
