--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,26 @@
         android:theme="@style/Theme.Duan1t1"
         tools:targetApi="31">
         <activity
-            android:name=".EventBus.DangKyActivity"
-            android:exported="false" />
-        <activity
-            android:name=".EventBus.DangNhapActivity"
-            android:exported="true">
+            android:name=".Welcome"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
+            android:name=".PhanQuyen"
+            android:exported="false" />
+
+        <activity
+            android:name=".EventBus.DangNhapActivity"
+            android:exported="true"/>
+
+        <activity
             android:name=".Model.MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
