--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:exported="false" />
         <activity
             android:name=".ManHinhKhoiDau_Activity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".ManHinhChao_Activity"
             android:exported="true">
